--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,8 @@
 theme: jekyll-theme-minimal
 title: Marxistdzy 的个人主页
 description: 永远相信美好的事情将会发生！
+subtitle: ''
+keywords:
+author: Marxistdzy
+language: zh-cn
+timezone: ''
