--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Configurations
-title:            Jekyll Gitbook
+title:            Marxistdzy 的个人主页
 longtitle:        Jekyll Gitbook
-author:           HE Tao
-email:            sighingnow@gmail.com
+author:           Marxistdzy
+email:            dzy047801@outlook.com
 description: >
   Build Jekyll site with the GitBook style.
 
